added c:set and standardized taglib paths for non-jar resources to use file.toURL()